# fuiou_sdk_v3

./: .env.sample  .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  添加进件时序图.md
src/: __init__.py  bank_code.py  city_county.py  main.py  oss_upload_file.py  requests.py
src/datagrams/requests/: chnlSubMchIdQuery.xml  wxAuthQuery.xml  wxMchntAdd.xml  wxMchntNameCheck.xml  wxPreCreate.xml
src/datagrams/responses/: scan_entry.xml
src/fuiou_sdk/: __init__.py  requests.py  富友省市区代码20250212.csv
